# intel_dsl_cpe_fapi

./: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  ltmain.sh
cli/: dsl_fapi_cli.c  dsl_fapi_cli.h  dsl_fapi_cli_autogen.c  dsl_fapi_cli_ext_misc.c  dsl_fapi_cli_misc.c
doc/: doxyconfig  dsl_cpe_fapi.h  header.html
include/: dsl_fapi.h  dsl_fapi_safec_wrapper.h
src/: Makefile.am  Makefile.in  dsl_fapi.c  dsl_fapi_common.h  dsl_fapi_config.h.in  dsl_fapi_debug.h  ulogging.h
tools/: Makefile.am  Makefile.in  dsl_fapi_pipe.sh  dsl_fapid.c  dsl_fapid.h  dsl_fapid_cli.c
